// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render while loading 1`] = `
<styled.div>
  <Connect(Header) />
  <styled.div>
    <styled.div />
  </styled.div>
  <Footer />
</styled.div>
`;

exports[`render with errors 1`] = `
<styled.div>
  <Connect(Header) />
  <styled.div>
    <SplitPane
      allowResize={true}
      defaultSize="50%"
      maxSize={768}
      minSize={256}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      prefixer={
        Prefixer {
          "_browserInfo": Object {
            "blink": true,
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "name": "Safari",
            "osVersion": NaN,
            "safari": true,
            "x": true,
          },
          "_hasPropsRequiringPrefix": false,
          "_keepUnprefixed": false,
          "_metaData": Object {
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "keepUnprefixed": false,
            "requiresPrefix": Object {},
          },
          "_requiresPrefix": Object {},
          "_userAgent": "Node.js (darwin; U; rv:v8.9.4) AppleWebKit/537.36 (KHTML, like Gecko)",
          "prefixedKeyframes": "keyframes",
        }
      }
      primary="first"
      split="vertical"
    >
      <Editor
        style={
          Object {
            "height": "100%",
          }
        }
        theme="solarized light"
      />
      <styled.div>
        <Connect(Options) />
        <Connect(SearchPanel) />
        <UASTViewer />
      </styled.div>
    </SplitPane>
  </styled.div>
  <Footer />
  <Notifications>
    <Error
      key="0"
      message="error1"
      onRemove={[Function]}
    />
    <Error
      key="1"
      message="error2"
      onRemove={[Function]}
    />
  </Notifications>
</styled.div>
`;

exports[`renders without crashing 1`] = `
<styled.div>
  <Connect(Header) />
  <styled.div>
    <SplitPane
      allowResize={true}
      defaultSize="50%"
      maxSize={768}
      minSize={256}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      prefixer={
        Prefixer {
          "_browserInfo": Object {
            "blink": true,
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "name": "Safari",
            "osVersion": NaN,
            "safari": true,
            "x": true,
          },
          "_hasPropsRequiringPrefix": false,
          "_keepUnprefixed": false,
          "_metaData": Object {
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "keepUnprefixed": false,
            "requiresPrefix": Object {},
          },
          "_requiresPrefix": Object {},
          "_userAgent": "Node.js (darwin; U; rv:v8.9.4) AppleWebKit/537.36 (KHTML, like Gecko)",
          "prefixedKeyframes": "keyframes",
        }
      }
      primary="first"
      split="vertical"
    >
      <Editor
        style={
          Object {
            "height": "100%",
          }
        }
        theme="solarized light"
      />
      <styled.div>
        <Connect(Options) />
        <Connect(SearchPanel) />
        <UASTViewer />
      </styled.div>
    </SplitPane>
  </styled.div>
  <Footer />
</styled.div>
`;
